input/kueue/manifests/sourced/MutatingWebhookConfiguration_kueue-mutating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: kueue
    app.kubernetes.io/name: kueue
    app.kubernetes.io/version: v0.11.4
    control-plane: controller-manager
  name: kueue-mutating-webhook-configuration
  namespace: kueue-system
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-workload-codeflare-dev-v1beta2-appwrapper
    failurePolicy: Fail
    name: mappwrapper.kb.io
    rules:
      - apiGroups:
          - workload.codeflare.dev
        apiVersions:
          - v1beta2
        operations:
          - CREATE
        resources:
          - appwrappers
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-apps-v1-deployment
    failurePolicy: Fail
    name: mdeployment.kb.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kueue-system
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - deployments
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-batch-v1-job
    failurePolicy: Fail
    name: mjob.kb.io
    rules:
      - apiGroups:
          - batch
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - jobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-jobset-x-k8s-io-v1alpha2-jobset
    failurePolicy: Fail
    name: mjobset.kb.io
    rules:
      - apiGroups:
          - jobset.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
        resources:
          - jobsets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kubeflow-org-v1-paddlejob
    failurePolicy: Fail
    name: mpaddlejob.kb.io
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - paddlejobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kubeflow-org-v1-pytorchjob
    failurePolicy: Fail
    name: mpytorchjob.kb.io
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pytorchjobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kubeflow-org-v1-tfjob
    failurePolicy: Fail
    name: mtfjob.kb.io
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - tfjobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kubeflow-org-v1-xgboostjob
    failurePolicy: Fail
    name: mxgboostjob.kb.io
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - xgboostjobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate--v1-pod
    failurePolicy: Fail
    name: mpod.kb.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kueue-system
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-leaderworkerset-x-k8s-io-v1-leaderworkerset
    failurePolicy: Fail
    name: mleaderworkerset.kb.io
    rules:
      - apiGroups:
          - leaderworkerset.x-k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - leaderworkersets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kubeflow-org-v2beta1-mpijob
    failurePolicy: Fail
    name: mmpijob.kb.io
    rules:
      - apiGroups:
          - kubeflow.org
        apiVersions:
          - v2beta1
        operations:
          - CREATE
        resources:
          - mpijobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-ray-io-v1-raycluster
    failurePolicy: Fail
    name: mraycluster.kb.io
    rules:
      - apiGroups:
          - ray.io
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - rayclusters
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-ray-io-v1-rayjob
    failurePolicy: Fail
    name: mrayjob.kb.io
    rules:
      - apiGroups:
          - ray.io
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - rayjobs
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-apps-v1-statefulset
    failurePolicy: Fail
    name: mstatefulset.kb.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values:
            - kube-system
            - kueue-system
    rules:
      - apiGroups:
          - apps
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - statefulsets
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kueue-x-k8s-io-v1beta1-clusterqueue
    failurePolicy: Fail
    name: mclusterqueue.kb.io
    rules:
      - apiGroups:
          - kueue.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - clusterqueues
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kueue-x-k8s-io-v1beta1-resourceflavor
    failurePolicy: Fail
    name: mresourceflavor.kb.io
    rules:
      - apiGroups:
          - kueue.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - resourceflavors
    sideEffects: None
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kueue-webhook-service
        namespace: kueue-system
        path: /mutate-kueue-x-k8s-io-v1beta1-workload
    failurePolicy: Fail
    name: mworkload.kb.io
    rules:
      - apiGroups:
          - kueue.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
        resources:
          - workloads
    sideEffects: None
